<resources>
    <string name="app_name">Bezz Food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_title_profile">Profile</string>
    <string name="nav_title_order">Order</string>
    <string name="nav_title_logout">Logout</string>
    <string name="field_hint_email">Email</string>
    <string name="field_hint_password">Password</string>
    <string name="button_text_signup">sign up</string>
    <string name="button_text_submit">submit</string>
    <string name="field_hint_confirm">Retype password</string>
    <string name="text_basic_information">Basic Information</string>
    <string name="text_address_information">Address Information</string>
    <string name="text_buy">add to cart</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_no_menu">No menu yet! Please come back later.</string>
    <string name="text_my_cart">My Cart</string>
    <string name="text_add">+</string>
    <string name="text_remove">remove</string>
</resources>
