<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/root"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo"
            android:layout_margin="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_hint_email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_hint_password"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/field_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_hint_confirm"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/submit_button"
            android:onClick="onClickSubmit"
            android:padding="4dp"
            android:text="@string/button_text_submit"
            android:textColor="@color/white" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>