<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_food"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

            <jp.shts.android.library.TriangleLabelView
                android:id="@+id/label_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:backgroundColor="@color/yellow_900"
                app:corner="leftTop"
                app:labelBottomPadding="5dp"
                app:labelCenterPadding="0dp"
                app:labelTopPadding="10dp"
                app:primaryText="Item"
                app:primaryTextColor="@color/yellow_500"
                app:primaryTextSize="16sp"
                app:secondaryText="01"
                app:secondaryTextColor="@color/yellow_100"
                app:secondaryTextSize="11sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/label_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/button_remove"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:background="@null"
                android:layout_weight="1"
                android:text="@string/text_remove"
                android:textColor="?attr/colorAccent"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_buy"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:background="@drawable/buy_button"
                android:text="@string/text_add"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>